Pixellate video effect widget.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -30126,6 +30126,9 @@
         }
       }
     },
+    "Pixellate" : {
+
+    },
     "Platform to stream to" : {
       "localizations" : {
         "de" : {
