Default location settings.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -33458,7 +33458,7 @@
         }
       }
     },
-    "Send your location to rtirl.com." : {
+    "Send your location to https://rtirl.com, to let your viewers know where you are." : {
 
     },
     "Sepia" : {
