Stream switcher quick button started.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -36654,6 +36654,9 @@
         }
       }
     },
+    "Stream switcher" : {
+
+    },
     "Stream URL" : {
       "localizations" : {
         "de" : {
