--- a/Moblin/zh-Hant.lproj/InfoPlist.strings
+++ b/Moblin/zh-Hant.lproj/InfoPlist.strings
@@ -10,6 +10,9 @@
 /* Privacy - Local Network Usage Description */
 "NSLocalNetworkUsageDescription" = "Moblin 使用本地端作為 SRT 函式庫的輸入與輸出。";
 
+/* Privacy - Location When In Use Usage Description */
+"NSLocationWhenInUseUsageDescription" = "Moblin 可以顯示你的位置/時速 等資訊於實況畫面上。";
+
 /* Privacy - Microphone Usage Description */
 "NSMicrophoneUsageDescription" = "Moblin 串流音源來自麥克風。";
 
